# PORR

./: .gitignore  README.md
Datasets/: gplus.txt
Sequential/: CMakeLists.txt  Graph.cpp  Graph.h  dokumentacja.md  main.cpp  socialNet.cpp
Spark/: build.gradle
Spark/Datasets/: epinions.txt  gplus.txt
Spark/src/main/java/porr/spark/: Friendship.java  SparkApplication.java
Spark/src/main/resources/: application.yml
Spark/src/test/java/porr/spark/: SparkApplicationTests.java
